--- a/E_commerce/E_commerce/templates/dashboard.html
+++ b/E_commerce/E_commerce/templates/dashboard.html
@@ -24,5 +24,9 @@
 
 <h2>Total sale: order total</h2>
 <h2>Total Stock: stock total price</h2>
+<h2>Total User: stock total price</h2>
+<h2>Total order: stock total price</h2>
+<h2>Total product: stock total price</h2>
+<h2>Total Category: stock total price</h2>
 {% endblock dashboard-content %}
 
