--- a/E_commerce/E_commerce/templates/sidebar.html
+++ b/E_commerce/E_commerce/templates/sidebar.html
@@ -59,7 +59,7 @@
         </div>
 
         <ul class="list-unstyled px-2">
-            <li><a href="#" class="text-decoration-none px-3 py-2 px-2 d-block"><i
+            <li><a href="/admin" class="text-decoration-none px-3 py-2 px-2 d-block"><i
                         class="bi bi-house-door px-2"></i> Dashboard</a></li>
             <!-- <li class=""><a href="/admin" class="text-decoration-none px-3 py-2 px-2 d-block"><i class="bi bi-list px-2"></i>
                     Projects</a></li>
