--- a/E_commerce/E_commerce/templates/adminproduts.html
+++ b/E_commerce/E_commerce/templates/adminproduts.html
@@ -33,14 +33,12 @@
         </button>
             </div>
             <div class="p-2" style="margin-left: 20rem;">
-                <!-- Search bar -->
-                <form class="d-flex pl-5" method="POST" action="{% url 'search' %}">
-                    {% csrf_token %}
-                    <div class="input-group">
-                        <input class="form-control bg-light" type="search" placeholder="Search product" name="search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </div>
-                </form>
+                    <form class="d-flex pl-5">
+                        <div class="input-group">
+                            <input class="form-control bg-light" type="search" placeholder="Search product" id="searchbar" aria-label="Search">
+                            <button class="btn btn-outline-success" type="button">Search</button>
+                        </div>
+                    </form>
             </div>
         </div>
         <div class="d-flex flex-wrap align-items-center mb-3">
@@ -259,5 +257,23 @@
     </div>
 </div>
 {% endfor %}
+<script type="text/javascript">
+    $(document).ready(function(){
+        // Intercept input in the search box
+        $('#searchbar').on('input', function() {
+            var query = $(this).val();  // Get the value typed in the search box
+            $.ajax({
+                type: "GET",
+                url: "{% url 'searchproduct' %}",  // URL to your search endpoint
+                data: {
+                    'search': query,  // Pass the query as data to the server
+                },
+                success: function(response) {
+                    $('#productList').html(response.html);  // Update the product container with the search results HTML snippet
+                }
+            });
+        });
+    });
+</script>
 
 {% endblock dashboard-content %}
