create payment,shipping address,order,orderitem model

--- a/E_commerce/E_commerce/templates/cart.html
+++ b/E_commerce/E_commerce/templates/cart.html
@@ -82,8 +82,17 @@
             <tr>
               <th colspan="4"></th>
               <th>Grand Total:</th>
-
               <th>{{total}} </th>
+            </tr>
+            <tr>
+              <th colspan="4"></th>
+              <th>Grand Total with GST(18%):</th>
+              <th>{{gsttotal}} </th>
+            </tr>
+            <tr>
+              <th colspan="4"></th>
+              <th colspan="2" class="d-flex justify-content-center"><a href="#" class="btn btn-info">Checkout</a></th>
+              
             </tr>
           </tbody>
         </table>
