--- a/E_commerce/E_commerce/templates/adminproduts.html
+++ b/E_commerce/E_commerce/templates/adminproduts.html
@@ -48,6 +48,7 @@
                 <table class="table">
                     <thead>
                         <tr>
+                            <th>ID</th>
                             <th>Image</th>
                             <th>Name</th>
                             <th>Price</th>
@@ -61,6 +62,7 @@
                     <tbody id="productList">
                         {% for product in products %}
                         <tr>
+                            <td>{{product.product_id}}</td>
                             <td><img class="card-img" src="../../media/{{product.img}}" alt="Product Image"></td>
                             <td>{{product.name}}</td>
                             <td>{{product.price}}</td>
@@ -122,7 +124,7 @@
                         </div>
                         <div class="col-12 my-2">
                             <label for="inputquestio" class="form-label fs-4 fw-bold">Img</label>
-                            <input type="file" class="form-control border border-secondary" id="inputquery" name="img">
+                            <input type="file" class="form-control border border-secondary" multiple id="inputquery" name="img">
                         </div>
                         <div class="form-group">
                             <label for="category">Category:</label>
@@ -237,7 +239,7 @@
                     </div>
                     <div class="col-12 my-2">
                         <label for="inputquestio" class="form-label fs-4 fw-bold">Img</label>
-                        <input type="file" class="form-control border border-secondary" id="inputquery" name="img">
+                        <input type="file" class="form-control border border-secondary" id="inputquery" value="{{prod.img}}" name="img">
                     </div>
                     <div class="form-group">
                         <label for="category">Category:</label>
