--- a/E_commerce/E_commerce/templates/cart.html
+++ b/E_commerce/E_commerce/templates/cart.html
@@ -91,7 +91,7 @@
             </tr>
             <tr>
               <th colspan="4"></th>
-              <th colspan="2" class="d-flex justify-content-center"><a href="#" class="btn btn-info">Checkout</a></th>
+              <th colspan="2" class="d-flex justify-content-center"><a href="{% url 'checkout' %}" class="btn btn-info">Checkout</a></th>
               
             </tr>
           </tbody>
