--- a/E_commerce/E_commerce/static/css/style.css
+++ b/E_commerce/E_commerce/static/css/style.css
@@ -32,6 +32,7 @@
     background-color: rgba(225, 248, 251, 0.61);
     color: var(--dark-color);
     font-family: var(--body-font);
+    min-height: 100vh;
 }
 
 *,
@@ -114,7 +115,6 @@ a {
 
 
 /*-- LAYAOUT --*/
-
 .productcontainer h1 {
     margin: 2.5rem;
     margin-bottom: 0;
@@ -335,6 +335,9 @@ a {
 
 
 /* ======================footer===================== */
+.modal-content {
+    background-color: ivory;
+}
 
 footer {
     bottom: 0;
@@ -344,6 +347,7 @@ footer {
     background-color: #000000;
     color: white;
     text-align: center;
+    flex-shrink: 0;
 }
 
 
