--- a/E_commerce/E_commerce/templates/admincategory.html
+++ b/E_commerce/E_commerce/templates/admincategory.html
@@ -5,14 +5,15 @@
     }
 </style>
 {% if messages %}
-<div class="alert alert-primary" role="alert" id="messages-container" style="position: absolute;z-index: 1;width: 100%;">
+<div class="alert alert-primary" role="alert" id="messages-container"
+    style="position: absolute;z-index: 1;width: 100%;">
     {% for message in messages %} {{ message }} {% endfor %}
 </div>
 {% endif %}
 
 <script>
     // Function to hide the messages container after 3 seconds
-    setTimeout(function() {
+    setTimeout(function () {
         var messagesContainer = document.getElementById('messages-container');
         if (messagesContainer) {
             messagesContainer.style.display = 'none';
@@ -25,18 +26,20 @@
     <div class="container mt-2">
         <div class="d-flex">
             <div class="mr-auto p-2">
-                <button type="button" class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#add_category">
-          Add Category
-        </button>
+                <button type="button" class="btn btn-primary me-2" data-bs-toggle="modal"
+                    data-bs-target="#add_category">
+                    Add Category
+                </button>
             </div>
             <div class="p-2" style="margin-left: 28rem;">
                 <form class="d-flex pl-5">
                     <div class="input-group">
-                        <input class="form-control bg-light" type="search" placeholder="Search product" id="searchbar" aria-label="Search">
+                        <input class="form-control bg-light" type="search" placeholder="Search product" id="searchbar"
+                            aria-label="Search">
                         <button class="btn btn-outline-success" type="button">Search</button>
                     </div>
                 </form>
-        </div>
+            </div>
         </div>
         <div class="d-flex flex-wrap align-items-center mb-3">
         </div>
@@ -56,9 +59,11 @@
                         <tr>
                             <td>{{Category.category_id}}</td>
                             <td>{{Category.category}}</td>
-                            <td><button class="btn btn-info " data-bs-toggle="modal" data-bs-target="#updateModal-{{forloop.counter}}">Update</button></td>
-                            <td><button class="btn btn-danger " data-bs-toggle="modal" data-bs-target="#deleteModal-{{forloop.counter}}">Delete</button></td>
-                            
+                            <td><button class="btn btn-info " data-bs-toggle="modal"
+                                    data-bs-target="#updateModal-{{forloop.counter}}">Update</button></td>
+                            <td><button class="btn btn-danger " data-bs-toggle="modal"
+                                    data-bs-target="#deleteModal-{{forloop.counter}}">Delete</button></td>
+
                         </tr>
                         {% endfor %}
                     </tbody>
@@ -84,7 +89,8 @@
                     <div class="modal-body">
                         <div class="col-12 my-2">
                             <label for="inputquestio" class="form-label fs-4 fw-bold">Category</label>
-                            <input type="text" class="form-control border border-secondary" id="inputquery" name="category">
+                            <input type="text" class="form-control border border-secondary" id="inputquery"
+                                name="category">
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -100,7 +106,8 @@
 <!-- for update popup -->
 <!-- Modal -->
 {% for category in Categorys %}
-<div class="modal" id="updateModal-{{forloop.counter}}" tabindex="-1" aria-labelledby="updateModalLabel" aria-hidden="true">
+<div class="modal" id="updateModal-{{forloop.counter}}" tabindex="-1" aria-labelledby="updateModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -112,7 +119,8 @@
                 <div class="modal-body">
                     <div class="col-12 my-2">
                         <label for="inputquery" class="form-label fs-4 fw-bold">Category</label>
-                        <input type="text" class="form-control border border-secondary" id="inputquery" name="category" value="{{ category.category }}">
+                        <input type="text" class="form-control border border-secondary" id="inputquery" name="category"
+                            value="{{ category.category }}">
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -128,7 +136,8 @@
 <!-- for delete popup -->
 <!-- Modal -->
 {% for category in Categorys %}
-<div class="modal" id="deleteModal-{{forloop.counter}}" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div class="modal" id="deleteModal-{{forloop.counter}}" tabindex="-1" aria-labelledby="deleteModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -151,9 +160,9 @@
 {% endfor %}
 
 <script type="text/javascript">
-    $(document).ready(function(){
+    $(document).ready(function () {
         // Intercept input in the search box
-        $('#searchbar').on('input', function() {
+        $('#searchbar').on('input', function () {
             var query = $(this).val();  // Get the value typed in the search box
             $.ajax({
                 type: "GET",
@@ -161,7 +170,7 @@
                 data: {
                     'search': query,  // Pass the query as data to the server
                 },
-                success: function(response) {
+                success: function (response) {
                     $('#productList').html(response.html);  // Update the product container with the search results HTML snippet
                 }
             });
