--- a/E_commerce/E_commerce/templates/adminorder.html
+++ b/E_commerce/E_commerce/templates/adminorder.html
@@ -1,6 +1,11 @@
 {% extends "sidebar.html" %}
 {% load static %}
 {% block dashboard-content %}
+<style>
+  .modal-content {
+      background-color: ivory;
+  }
+</style>
 {% if messages %}
 <div class="alert alert-primary" role="alert" id="messages-container"  style="position: absolute;z-index: 1;width: 100%;">
   {% for message in messages %}
@@ -23,18 +28,35 @@
   <h1>Order</h1>
   <main class="main bd-grid" id="product-container">
     <div class="container mt-5">
+      <div class="d-flex">
+        <div class="mr-auto p-2">
+          <button type="button" class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#add_order">
+              Add Order
+          </button>
+      </div>
+        <div class="p-2" style="margin-left: 33rem;">
+            <form class="d-flex pl-5">
+                <div class="input-group">
+                    <input class="form-control bg-light" type="search" placeholder="Search product" id="searchbar"
+                        aria-label="Search">
+                    <button class="btn btn-outline-success" type="button">Search</button>
+                </div>
+            </form>
+        </div>
+    </div>
       <div class="table-responsive">
         {% if orders %}
         <table class="table">
           <thead>
             <tr>
               <th>Order ID</th>
+              <th>Order Name</th>
               <th>Order Status</th>
               <th>Order Amount</th>
               <th>Order date</th>
-              <th>Open</th>
-              <th>Update</th>
-              <th>Delete</th>
+              <th>View Order</th>
+              <th>Update Order</th>
+              <th>Delete Order</th>
             </tr>
           </thead>
           <tbody>
@@ -42,7 +64,11 @@
            
             <tr>
               <td>
-                <span class="font-weight-bold cartprodname">{{ order.order_number }}</span>
+                <!-- <span class="font-weight-bold cartprodname">num:{{ order.order_number }}</span> -->
+                <span class="font-weight-bold cartprodname">{{ order.id }}</span>
+              </td>
+              <td>
+                <span class="font-weight-bold cartprodname">{{ order.user }}</span>
               </td>
               <td>
                 <span class="font-weight-bold cartprodname">{{ order.order_status }}</span>
@@ -54,13 +80,13 @@
                 <span class="font-weight-bold">{{ order.created_at }}</span>
               </td>
               <td>
-                <span class="font-weight-bold btn btn-success"><i class="bi bi-eye-fill"></i></span>
+                <a href="{% url 'adminorderdetail' order_id=order.id %}"><span class="font-weight-bold btn btn-success"><i class="bi bi-eye-fill"></i></span></a>
               </td>
               <td>
                 <span class="font-weight-bold btn btn-info">Update</span>
               </td>
               <td>
-                <span class="font-weight-bold btn btn-danger">Delete</span>
+                <a href="{% url 'adminorderdetaildelete' order_id=order.id %}"><span class="font-weight-bold btn btn-danger">Delete</span></a>
               </td>
             {% endfor %}
           </tbody>
@@ -75,5 +101,49 @@
     </div>
   </main>
 </container>
+
+
+<!-- for add popup -->
+<!-- Modal -->
+<div class="modal fade" id="add_order" tabindex="-1" aria-labelledby="add_orderLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="add_orderLabel">Add Order</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form method="post" action="{% url 'adminorderadd'  %}">
+                  {% csrf_token %}
+                  <div class="form-group">
+                      <label for="full_name" class="form-label">Full Name:</label>
+                      <input type="text" class="form-control" id="full_name" name="full_name" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="order_total" class="form-label">Order Total:</label>
+                      <input type="number" class="form-control" id="order_total" name="order_total" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="order_status" class="form-label">Order Status:</label>
+                      <select class="form-control" id="order_status" name="order_status" required>
+                          <option value="Pending">Pending</option>
+                          <option value="Accepted">Accepted</option>
+                          <option value="Completed">Completed</option>
+                          <option value="Cancelled">Cancelled</option>
+                      </select>
+                  </div>
+                  <div class="form-group">
+                      <label for="order_note" class="form-label">Order Note:</label>
+                      <textarea class="form-control" id="order_note" name="order_note"></textarea>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="submit" class="btn btn-info">Add Order</button>
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
 {% endblock dashboard-content %}
 
