--- a/E_commerce/E_commerce/templates/productdetail.html
+++ b/E_commerce/E_commerce/templates/productdetail.html
@@ -22,7 +22,7 @@
     </script>
 
     <div class="pdr1">
-        <a href="/"><button class="btn btn-info">Go back to home Page</button></a>
+        <a href="/admin/order"><button class="btn btn-info">Go back to home Page</button></a>
     </div>
     <div class="pdr2">
         <div class="pdr2c1">
