--- a/E_commerce/E_commerce/templates/updateuser.html
+++ b/E_commerce/E_commerce/templates/updateuser.html
@@ -38,31 +38,31 @@
             <div class="form-group col-md-6 my-2">
                 <label class="form-label">First name</label>
                 <input type="text" class="form-control form-control-lg border border-dark" id="exampleInputEmail1" aria-describedby="emailHelp"
-                    value="{{ user.first_name }}" name="first_name" required>
+                    value="{{ myuser.first_name }}" name="first_name" required>
             </div>
             <div class="form-group col-md-6 my-2">
                 <label class="form-label">Last name</label>
                 <input type="text" name="last_name" class="form-control form-control-lg border border-dark" id="exampleInputEmail1"
-                    aria-describedby="emailHelp"  value="{{ user.last_name }}"  required>
+                    aria-describedby="emailHelp"  value="{{ myuser.last_name }}"  required>
             </div>
             <div class="form-group col-md-6 my-2">
                 <label class="form-label">Username</label>
                 <input type="text" name="username" class="form-control form-control-lg border border-dark" id="exampleInputEmail1"
-                    aria-describedby="emailHelp"  value="{{ user.username }}"  required>
+                    aria-describedby="emailHelp"  value="{{ myuser.username }}"  required>
             </div>
             <div class="form-outline col-md-6 my-2">
                 <label class="form-label" for="typeEmailX">Phone NO</label>
-                <input type="name" id="typeEmailX"  value="{{ user.phone }}" 0" name="phone" required
+                <input type="name" id="typeEmailX"  value="{{ myuser.phone }}" 0" name="phone" required
                     class="form-control form-control-lg border border-dark" />
             </div>
             <div class="form-outline col-md-6 my-2">
                 <label class="form-label" for="typeEmailX">Email</label>
-                <input type="email" id="typeEmailX"  value="{{ user.email }}"  name="email" required
+                <input type="email" id="typeEmailX"  value="{{ myuser.email }}"  name="email" required
                     class="form-control form-control-lg border border-dark" />
             </div>
             <div class="form-outline col-md-6 my-2">
                 <label class="form-label" for="typeEmailX">Address</label>
-                <input type="name" id="typeEmailX"  value="{{ user.Address }}"  name="Address" required
+                <input type="name" id="typeEmailX"  value="{{ myuser.Address }}"  name="Address" required
                     class="form-control form-control-lg border border-dark" />
             </div>
             <button class="btn btn-success my-5" name="signup" type="submit">Update</button>
