--- a/E_commerce/E_commerce/templates/orderdetail.html
+++ b/E_commerce/E_commerce/templates/orderdetail.html
@@ -20,7 +20,7 @@
   }, 3000); // 3000 milliseconds = 3 seconds
 </script>
 <div class="pdr1">
-  <a href="/admin/order"><button class="btn btn-info">Go back to home Page</button></a>
+  <a href="/order"><button class="btn btn-info">Go back to order Page</button></a>
 </div>
 <h1>orderdetails</h1>
 <main class="main bd-grid" id="product-container">
